Add test for State Processor API